cmake_minimum_required(VERSION 3.27)
project(DataStructures)

set(CMAKE_CXX_STANDARD 23)

add_executable(Exercises/echo Exercises/echo/main.cpp Exercises/echo/echo_application.cpp)
add_executable(Exercises/stringstream Exercises/stringstream/main.cpp)
add_executable(Exercises/command_line Exercises/command_line/main.cpp)
add_executable(Exercises/vector Exercises/vector/main.cpp)
add_executable(Exercises/dynamic_array Exercises/dynamic_array/main.cpp)
add_executable(Exercises/pointers Exercises/pointers/main.cpp)
add_executable(Exercises/linked_lists Exercises/linked_lists/main.cpp)
add_executable(Exercises/smart_pointer Exercises/smart_pointer/main.cpp)
add_executable(Exercises/iterator Exercises/iterator/main.cpp)
add_executable(Exercises/queues Exercises/queues/main.cpp)
add_executable(Exercises/stack Exercises/stack/main.cpp)